The reader of the byte and short class variable return the int type.
  [Incompatible Changes]
    * The reader of the byte and short class variable return the int type.
      This is because public API is good to return the int type regardless of the internal class variable type byte/short.

--- a/Changes
+++ b/Changes
@@ -4,6 +4,8 @@
       This is because public API is good to return the int type regardless of the internal field type byte/short.
     * The writer of the byte and short field recieve the int type.
       This is because public API is good to receive the int type regardless of the internal field type byte/short.
+    * The reader of the byte and short class variable return the int type.
+      This is because public API is good to return the int type regardless of the internal class variable type byte/short.
     
 0.9661 2022-11-14
   [Incompatible Changes]
