--- a/Changes
+++ b/Changes
@@ -16,7 +16,8 @@
     * Fixed the bug that the interface of the parent class is not recognized.
     * Fiexd the bug that The checking of the required method doesn't see the super class
       https://github.com/yuki-kimoto/SPVM/issues/246
-      
+  [New Features]
+    * The method can have the more optional arguments than the arguments of the interface method.
 0.9662 2022-11-15
   [Incompatible Changes]
     * The reader of the byte and short field return the int type.
