Added the following methods to the Fn class.
  [New Features]
    * Added the following methods to the Fn class.

      static method init_string : void ($string : mutable string, $ascii_code = 0 : int, $offset = 0 : int, $length = -1 : int);

--- a/Changes
+++ b/Changes
@@ -26,7 +26,8 @@
 
       static method sizeof_native_int : int ();
       static method sizeof_native_pointer : int ();
-    
+      static method init_string : void ($string : mutable string, $ascii_code = 0 : int, $offset = 0 : int, $length = -1 : int);
+      
   [Imcompatible Changes]
     * The field in the "foo" class with the same name as the "MyClass\" field in the parent class cannot be defined.
   [Exception Message Improvement]
