--- a/Changes
+++ b/Changes
@@ -20,6 +20,7 @@
       https://github.com/yuki-kimoto/SPVM/issues/249
     * The bug that original exception is overwriten by destructor exception
       https://github.com/yuki-kimoto/SPVM/issues/253
+    * Fixed the bug that Windows I/O binary mode in spvmcc command.
   [New Features]
     * The method can have the more optional arguments than the arguments of the interface method.
     * Added the following methods to the Fn class.
