--- a/Changes
+++ b/Changes
@@ -19,6 +19,9 @@
         The C<$offset> must be greater than or equal to 0.
 
         The C<$offset> + C<$length> must be less than or equal to the length of the C<$string>.
+    * Added the follwoing method to the Hash class.
+      method clone : Hash ();
+    * Added the Cloneable interface to tha Hash class.
       
   [Imcompatible New Features]
     * The octal escape character \000 and \o{} is added.
