--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+0.9665 2022-12-06
+  [Internal Compatible Changes]
+    * Renamed spvm_api_vm.h to spvm_vm.h.
+    * Renamed spvm_api_vm.c to spvm_vm.c.
+    * Renamed SPVM_API_VM_call_spvm_method_vm to SPVM_VM_call_spvm_method.
+    * Added SPVM_API_call_spvm_method_vm.
+    
 0.9664 2022-12-01
   [Internal Compatible Changes]
     * Added spvm_inline_api.h and use it in spvm_api.c, spvm_api_vm.c, spvm_precompile.c
