--- a/Changes
+++ b/Changes
@@ -5,7 +5,8 @@
     * Renamed SPVM_API_VM_call_spvm_method_vm to SPVM_VM_call_spvm_method.
     * Added SPVM_API_call_spvm_method_vm.
     * Renamed spvm_inline_api.h to spvm_implement.h
-    
+  [Bug Fix]
+    * Fixed the potential bug of the stack of the arguments and return value.
 0.9664 2022-12-01
   [Internal Compatible Changes]
     * Added spvm_inline_api.h and use it in spvm_api.c, spvm_api_vm.c, spvm_precompile.c
