--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.9665 2022-12-14
+  [Build Process Improvement]
+    * Added --no-build-spvm-modules option to Makefile.PL.
+
 0.9665 2022-12-10
   [Internal Compatible Changes]
     * Renamed spvm_api_vm.h to spvm_vm.h.
