--- a/Changes
+++ b/Changes
@@ -10,7 +10,21 @@
       
       -  int32_t (*get_elem_byte_size)(SPVM_ENV* env, SPVM_VALUE* stack, void* array);
       +  int32_t (*get_elem_size)(SPVM_ENV* env, SPVM_VALUE* stack, void* array);
-    
+    * Changed the definitions of the following native APIs.
+      -  int32_t (*get_basic_type_id)(SPVM_ENV* env, const char* basic_type_name);
+      -  int32_t (*get_field_id)(SPVM_ENV* env, void* object, const char* field_name);
+      -  int32_t (*get_field_offset)(SPVM_ENV* env, int32_t field_id);
+      -  int32_t (*get_class_var_id)(SPVM_ENV* env, const char* class_name, const char* class_var_name);
+      -  int32_t (*get_class_method_id)(SPVM_ENV* env, const char* class_name, const char* method_name);
+      -  int32_t (*get_instance_method_id)(SPVM_ENV* env, void* object, const char* method_name);
+
+      +  int32_t (*get_basic_type_id)(SPVM_ENV* env, SPVM_VALUE* stack, const char* basic_type_name);
+      +  int32_t (*get_field_id)(SPVM_ENV* env, SPVM_VALUE* stack, void* object, const char* field_name);
+      +  int32_t (*get_field_offset)(SPVM_ENV* env, SPVM_VALUE* stack, int32_t field_id);
+      +  int32_t (*get_class_var_id)(SPVM_ENV* env, SPVM_VALUE* stack, const char* class_name, const char* class_var_name);
+      +  int32_t (*get_class_method_id)(SPVM_ENV* env, SPVM_VALUE* stack, const char* class_name, const char* method_name);
+      +  int32_t (*get_instance_method_id)(SPVM_ENV* env, SPVM_VALUE* stack, void* object, const char* method_name);
+
 0.9666 2022-12-16
   [Bug Fix]
     * Fixed the bug that SPVM don't work on Windows Server 2020/2022.
