--- a/Changes
+++ b/Changes
@@ -1,7 +1,9 @@
 0.9668 2022-12-18
+  [Incompatible Bug Fix]
+    * Fixed the bug that env->get_args_stack_length returns the legnth of arguments, not the stack length of the arguments.
   [Compatible Internal Changes]
     * The CALL_METHOD opcode is separated into CALL_CLASS_METHOD, CALL_INSTANCE_METHOD_STATIC, and CALL_INSTANCE_METHOD_DYNAMIC.
-    
+  
 0.9667 2022-12-17
   [New Features]
     * Added the following native API.
