Added the items operator.
  [New Features]
    * Added the items operator.

--- a/Changes
+++ b/Changes
@@ -3,7 +3,7 @@
     * Added the items native API.
       
       int32_t (*items)(SPVM_ENV* env, SPVM_VALUE* stack);
-      
+    * Added the items operator.
   [Incompatible Bug Fix]
     * Fixed the bug that env->get_args_stack_length returns the legnth of arguments, not the stack length of the arguments.
   [Compatible Internal Changes]
