--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-0.9668 2022-12-18
+0.9668 2022-12-20
   [New Features]
     * Added the items native API.
       
@@ -16,6 +16,10 @@
     * The CALL_METHOD opcode is separated into CALL_CLASS_METHOD, CALL_INSTANCE_METHOD_STATIC, and CALL_INSTANCE_METHOD_DYNAMIC.
   [Incompatible Changes]
     * Change the name of the call_spvm_method native API to call_method.
+    * Removed the following native APIs. Use call_method instead.
+      
+      -  int32_t (*call_class_method)(SPVM_ENV* env, SPVM_VALUE* stack, int32_t method_id, int32_t args_stack_length);
+      -  int32_t (*call_instance_method)(SPVM_ENV* env, SPVM_VALUE* stack, int32_t method_id, int32_t args_stack_length);
   
 0.9667 2022-12-17
   [New Features]
