Changed the definition of the call_instance_method_by_name native API.
  [Incompatible Changes]
    * Changed the definition of the call_instance_method_by_name native API.

      -int32_t SPVM_API_call_instance_method_by_name(SPVM_ENV* env, SPVM_VALUE* stack, SPVM_OBJECT* object, const char* method_name, int32_t args_stack_length, const char* file, int32_t line);
      +int32_t SPVM_API_call_instance_method_by_name(SPVM_ENV* env, SPVM_VALUE* stack, const char* method_name, int32_t args_stack_length, const char* file, int32_t line);

--- a/Changes
+++ b/Changes
@@ -15,12 +15,13 @@
   [Compatible Internal Changes]
     * The CALL_METHOD opcode is separated into CALL_CLASS_METHOD, CALL_INSTANCE_METHOD_STATIC, and CALL_INSTANCE_METHOD_DYNAMIC.
   [Incompatible Changes]
-    * Change the name of the call_spvm_method native API to call_method.
+    * Changed the name of the call_spvm_method native API to call_method.
     * Removed the following native APIs. Use call_method instead.
       
       -  int32_t (*call_class_method)(SPVM_ENV* env, SPVM_VALUE* stack, int32_t method_id, int32_t args_stack_length);
       -  int32_t (*call_instance_method)(SPVM_ENV* env, SPVM_VALUE* stack, int32_t method_id, int32_t args_stack_length);
-  
+    * Changed the definition of the call_instance_method_by_name native API.
+      
 0.9667 2022-12-17
   [New Features]
     * Added the following native API.
